# VacancyDBManager

./: .gitignore  README.md  config.py  main.py  pyproject.toml
tests/: test_api_service.py  test_utils.py
vacancy_db_manager/: api_service.py  db_creator.py  db_manager.py  models.py  user_interactions.py  utils.py
